@@ -45,7 +45,11 @@ accepts the following command-line options.
 Print version information.
 .TP
 .B \-f
-Run in the foreground, printing messages to stdout/stderr.
+Run in the foreground, printing log messages to stdout.
+.TP
+.B \-d
+Run in the foreground, printing log messages to stdout and debug
+messages to stderr.
 
 .SH FILES
 .TP
